--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="script.js"></script>
+    <script src="website.js"></script>
 </body>
 
 </html>
