--- a/index.html
+++ b/index.html
@@ -22,6 +22,22 @@
 </head>
 
 <body>
+    <!-- Success Modal -->
+    <div id="successModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <i class="fas fa-check-circle"></i>
+                <h3>RSVP Submitted Successfully!</h3>
+            </div>
+            <div class="modal-body">
+                <p>Thank you for your RSVP! We look forward to celebrating with you on our special day.</p>
+            </div>
+            <div class="modal-footer">
+                <button class="btn-primary" onclick="closeModal()">Close</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Navigation -->
     <nav class="navbar">
         <div class="nav-container">
@@ -150,7 +166,7 @@
                 <div class="timeline-item">
                     <div class="timeline-time">4:00 PM</div>
                     <div class="timeline-icon">
-                        <i class="fas fa-om"></i>
+                        <span style="font-size: 1.8rem; font-weight: bold; color: white; line-height: 1; transform: translateY(-4px);">ௐ</span>
                     </div>
                     <div class="timeline-content">
                         <h3>Tamil Outdoor Ceremony</h3>
@@ -509,13 +525,6 @@
         </div>
     </footer>
 
-    <!-- Success Snackbar -->
-    <div id="successSnackbar" class="snackbar">
-        <div class="snackbar-content">
-            <i class="fas fa-check-circle"></i>
-            <span>Thank you for your RSVP! We look forward to celebrating with you.</span>
-        </div>
-    </div>
 
     <!-- JavaScript -->
     <script src="website.js"></script>
