Changing some wording

--- a/index.html
+++ b/index.html
@@ -417,8 +417,8 @@
                 <div class="registry-message">
                     <i class="fas fa-heart registry-icon"></i>
                     <h3>Your presence at our wedding is the greatest gift of all.</h3>
-                    <p>Having you celebrate with us on our special day means the world to us.</p>
-                    <p>Our gift registries are still under development, but we'll update this section soon with more details for those who have asked.</p>
+                    <p>Having you celebrate with us on our special day means the world to us and is the only gift we could ask for.</p>
+                    <p>But if you do want to get us something, our gift registries are still under development, but we'll update this section soon with more details for those who have asked.</p>
                 </div>
             </div>
         </div>
