Fixing email address

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             convenience and safety. Booking in at Lythwood the night of the wedding will allow you to 
                             join us for breakfast on the first day of us as a married couple.</p>
 
-                        <p>Please contact our wedding planner, <strong>John</strong> (<a href="mailto:events@lythwood.co.za">events@lythwood.co.za</a>), 
+                        <p>Please contact our wedding planner, <strong>John</strong> (<a href="mailto:events@lythwood.com">events@lythwood.com</a>), 
                             who will be more than happy to assist with accommodation arrangements. Alternatively, you're welcome to let either of us know if you require any help.</p>
 
                      
